# yoctolib_cpp

./: .gitignore  CMakeLists.txt
Sources/: CMakeLists.txt  yocto_api.h
